admin buttons vorangekommen

--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,10 @@ subprojects {
         standardOutput = System.out
     }
 
-    tasks.withType(JavaCompile) {
-        options.encoding = 'UTF-8'
+    tasks.withType(JavaCompile).tap {
+        configureEach {
+            options.encoding = 'UTF-8'
+        }
     }
 
     repositories {
