--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -15,7 +15,7 @@ ext {
     junitVersion = '5.8.2'
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
