--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -38,14 +38,24 @@ dependencies {
     implementation "jakarta.ws.rs:jakarta.ws.rs-api:${restVersion}"
     implementation("jakarta.activation:jakarta.activation-api:2.1.0")
 
+    implementation "org.json:json:20220320"
+
     implementation "org.glassfish.jersey.core:jersey-client:${jerseyVersion}"
     implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
     implementation "org.glassfish.jaxb:jaxb-runtime:${jaxbVersion}"
 
+    implementation "com.google.code.gson:gson:2.10.1"
+
+
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation project(path: ':Server')
     annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
 
+    implementation "com.owlike:genson:0.98"
+
+    implementation "jakarta.xml.bind:jakarta.xml.bind-api:4.0.0"
+    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
     implementation project(':Common')
 }
 
