--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -3,7 +3,7 @@ version '1.0-SNAPSHOT'
 
 dependencies {
     implementation "org.json:json:20220320"
-    implementation "com.fasterxml.jackson.core:jackson-core:2.14.2"
-    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.14.1'
+    implementation "com.fasterxml.jackson.core:jackson-core:${fasterxmlVersion}"
+    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: "${fasterxmlVersion}"
     implementation 'com.google.code.gson:gson:2.10.1'
 }
