--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -12,22 +12,31 @@ jar {
 
 dependencies {
 
-    implementation "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
-    implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
-    implementation "org.glassfish.jersey.containers:jersey-container-grizzly2-http:${jerseyVersion}"
-    implementation "org.glassfish.jaxb:jaxb-runtime:4.0.0"
+    implementation "org.glassfish.jersey.core:jersey-server:2.34"
+    implementation "org.glassfish.jersey.inject:jersey-hk2:2.34"
+    implementation "org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.34"
+    implementation "org.glassfish.jaxb:jaxb-runtime:${jaxbVersion}"
+
     implementation "javax.ws.rs:javax.ws.rs-api:2.1.1"
-    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
-    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.14.1'
+    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
+    implementation "javax.xml.bind:jaxb-api:2.3.1" +
+            ""
+
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: "2.34"
     implementation "org.glassfish.grizzly:grizzly-http-server:${grizzlyVersion}"
     implementation "org.glassfish.grizzly:grizzly-websockets:${grizzlyVersion}"
 
     implementation "org.json:json:20220320"
 
-    implementation "com.fasterxml.jackson.core:jackson-core:2.14.1"
-    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.14.1'
+    implementation "com.fasterxml.jackson.core:jackson-core:${fasterxmlVersion}"
+    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: "${fasterxmlVersion}"
+    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: "${fasterxmlVersion}"
 
     implementation "org.mariadb.jdbc:mariadb-java-client:${jdbcVersion}"
+
+    implementation "javax.annotation:javax.annotation-api:1.3.2"
+
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 
     implementation project(':Common')
 }
