--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -6,4 +6,8 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-core:2.14.2"
     implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.14.1'
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    implementation("org.glassfish.jersey.inject:jersey-hk2:2.34") {
+        exclude group: "org.glassfish.jersey.inject", module: "jakarta.inject"
+    }
 }
