--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -1,5 +1,5 @@
 application {
-    mainClass = "${group}.${project.name.toLowerCase()}.Main"
+    mainClass = "${group}.Start"
 }
 
 jar {
@@ -10,22 +10,22 @@ jar {
     }
 }
 
+ext {
+    log4jVersion = '2.20.0'
+    jacksonVersion = '2.14.2'
+
+}
+
 dependencies {
 
     implementation "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
     implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
-    implementation "org.glassfish.jersey.containers:jersey-container-grizzly2-http:${jerseyVersion}"
-    implementation "org.glassfish.jaxb:jaxb-runtime:4.0.0"
-    implementation "javax.ws.rs:javax.ws.rs-api:2.1.1"
-    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
-    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.14.1'
     implementation "org.glassfish.grizzly:grizzly-http-server:${grizzlyVersion}"
     implementation "org.glassfish.grizzly:grizzly-websockets:${grizzlyVersion}"
+    implementation "org.glassfish.jersey.containers:jersey-container-grizzly2-http:${jerseyVersion}"
 
-    implementation "org.json:json:20220320"
-
-    implementation "com.fasterxml.jackson.core:jackson-core:2.14.1"
-    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.14.1'
+    implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
+    implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
 
     implementation "org.mariadb.jdbc:mariadb-java-client:${jdbcVersion}"
 
