--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -13,6 +13,8 @@ repositories {
 
 ext {
     junitVersion = '5.8.2'
+    log4jVersion = '2.20.0'
+
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -45,6 +47,10 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation project(path: ':Server')
     annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
+
+
+    implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
+    implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
 
     implementation project(':Common')
 }
