--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -54,11 +54,14 @@ dependencies {
     annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
     implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
 
+    implementation "com.owlike:genson:0.98"
+
+    implementation "jakarta.xml.bind:jakarta.xml.bind-api:4.0.0"
+    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
+    implementation project(':Common')
 
     implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
     implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
-
-    implementation project(':Common')
 }
 
 javafx {
