--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
 }
-group 'de.prog3'
+group 'de.prog'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -13,7 +13,7 @@ repositories {
 
 ext {
     junitVersion = '5.8.2'
-    log4jVersion = '2.20.0'
+    log4jVersion = '2.17.2'
 
 }
 
@@ -23,9 +23,9 @@ tasks.withType(JavaCompile).configureEach {
 
 
 application {
-    mainModule = 'de.prog3.client'
+    mainModule = 'de.prog.client'
 
-    mainClass = "de.prog3.client.application.DbmsApplication"
+    mainClass = "de.prog.client.application.DbmsApplication"
 }
 
 jar {
@@ -38,33 +38,32 @@ jar {
 
 dependencies {
     implementation "jakarta.ws.rs:jakarta.ws.rs-api:${restVersion}"
-    implementation("jakarta.activation:jakarta.activation-api:2.1.0")
+    implementation "jakarta.activation:jakarta.activation-api:2.1.0"
 
-    implementation "org.json:json:20220320"
+    implementation 'org.json:json:20230227'
 
     implementation "org.glassfish.jersey.core:jersey-client:${jerseyVersion}"
     implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
     implementation "org.glassfish.jaxb:jaxb-runtime:${jaxbVersion}"
 
-    implementation "com.google.code.gson:gson:2.10.1"
-
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation project(path: ':Server')
     annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
     implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
 
-    implementation "com.owlike:genson:0.98"
 
     implementation "jakarta.xml.bind:jakarta.xml.bind-api:4.0.0"
     implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
-    implementation project(':Common')
 
     implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
     implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
+
+    implementation project(':Common')
+    implementation project(path: ':Server')
+
 }
 
 javafx {
-    version = '17.0.2'
+    version = '18'
     modules = ['javafx.controls', 'javafx.fxml']
 }
