--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -1,19 +1,25 @@
 application {
-    mainClass = "${group}.Main"
+    mainClass = "${group}"
+    mainClassName = "${group}.Main"
+
 }
 
 jar {
     manifest {
         attributes(
-                'Main-Class': application.mainClassName
+                'Main-Class': { group }
         )
     }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
+
 
 ext {
     log4jVersion = '2.17.2'
     jacksonVersion = '2.14.2'
-
 }
 
 dependencies {
@@ -23,14 +29,14 @@ dependencies {
     implementation "org.glassfish.jaxb:jaxb-runtime:4.0.0"
     implementation "javax.ws.rs:javax.ws.rs-api:2.1.1"
     implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
-    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.14.1'
+    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: jacksonVersion
     implementation "org.glassfish.grizzly:grizzly-http-server:${grizzlyVersion}"
     implementation "org.glassfish.grizzly:grizzly-websockets:${grizzlyVersion}"
 
-    implementation "org.json:json:20220320"
+    implementation 'org.json:json:20230227'
 
-    implementation "com.fasterxml.jackson.core:jackson-core:2.14.1"
-    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.14.1'
+    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
+    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: jacksonVersion
 
     implementation "org.mariadb.jdbc:mariadb-java-client:${jdbcVersion}"
 
